--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Ozark Eclipse 2024</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- TODO: Minify and replace -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -20,22 +21,24 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-sun"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Experience the 2024 Solar Eclipse</h1>
+								<!-- TODO: Add content -->
+								<p>Come visit the natural beauty of the Ozarks while witnessing a once in a lifetime event.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
+								<!-- TODO: Finalize website pages -->
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<!-- TODO: Remove link in final version -->
+								<li><a href="#elements">Style Guide</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -343,7 +346,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">
+							A fully responsive site template designed by <a href="https://html5up.net" target="_blank">HTML5 UP</a> and released<br />
+							for free under the <a href="https://html5up.net/license" target="_blank">Creative Commons</a> license.
+						</p>
 					</footer>
 
 			</div>
@@ -355,6 +361,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
+			<!-- TODO: Minifiy and replace -->
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
