--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">
-							A fully responsive site template designed by <a href="https://html5up.net" target="_blank">HTML5 UP</a> and released<br />
+							A fully responsive site template designed by <a href="https://html5up.net" target="_blank">HTML5 UP</a> and released
 							for free under the <a href="https://html5up.net/license" target="_blank">Creative Commons</a> license.
 						</p>
 					</footer>
